admin dashboard update

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,7 @@
   left: 5px;
   cursor: pointer;
   font-size: 20px;
-  color: #007BFF;
+  color: #E5194B;
   background: #fff;
   padding: 5px;
   border-radius: 50%;
