--- a/frontend/src/components/Home/Search/Search.css
+++ b/frontend/src/components/Home/Search/Search.css
@@ -3,7 +3,7 @@
     height: 570px;
     position: relative;
     padding: auto;
-    background-color: #FEC5E4;
+    background-color: #FCF4E0;
     background-image: url('../../../fakeData/images/bannerbackground.png');
     background-size: cover;
     background-position: center;
