--- a/frontend/src/components/Home/MenuItem/MenuItem.css
+++ b/frontend/src/components/Home/MenuItem/MenuItem.css
@@ -7,11 +7,11 @@
     text-decoration: none;
 }
 
-.garage-item:hover {
+.restaurant-item:hover {
     background-color: white !important;
 }
 
-.garage:hover {
+.restaurant:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 30px;
     transition: box-shadow 0.2s ease-in-out;
