--- a/frontend/src/components/Home/MenuItem/MenuItem.css
+++ b/frontend/src/components/Home/MenuItem/MenuItem.css
@@ -20,7 +20,8 @@
 
 .item:hover {
     /* border: 1px solid black; */
+    /* background-color: white!important;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 30px;
-    transition: box-shadow 0.2s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out; */
 }
