--- a/frontend/src/components/Restaurant/Menu/Menu.css
+++ b/frontend/src/components/Restaurant/Menu/Menu.css
@@ -25,8 +25,9 @@ ul {
   /* font-size: 1.2rem; */
   /* text-transform: uppercase; */
   transition: color 0.1s, background-color 0.1s;
-  color: #000 !important;
+  color: #000;
   cursor: pointer;
+  font-size: 25px;
 }
 
 .menu a:hover {
@@ -37,6 +38,7 @@ ul {
   color: #E5194B !important;
 }
 
+
 .menu a::before {
   content: '';
   display: block;
@@ -44,24 +46,33 @@ ul {
   top: 100%;
   height: 3px;
   width: 100%;
-  background-color: #E5194B;
+  /* background-color: #E5194B;
   -webkit-transform-origin: center top;
   transform-origin: center top;
   -webkit-transform: scale(0, 1);
-  transform: scale(0, 1);
+  transform: scaleX(0);
   transition: color 0.1s, -webkit-transform 0.2s ease-out;
   transition: color 0.1s, transform 0.2s ease-out;
-  transition: color 0.1s, transform 0.2s ease-out, -webkit-transform 0.2s ease-out;
+  transition: color 0.1s, transform 0.2s ease-out, -webkit-transform 0.2s ease-out; */
 }
 
-.menu a:active::before {
-  background-color: #E5194B;
+
+
+.menu-active a{
+  color: #E5194B;
 }
 
-.menu a:hover::before,
-.menu a:focus::before {
-  -webkit-transform-origin: center top;
-  transform-origin: center top;
-  -webkit-transform: scale(1, 1);
-  transform: scale(1, 1);
+
+.underline-hover {
+  height: 3px;
+  width: 0;
+  background: #E5194B;
+  margin-top: 5px ;
+  position: relative;
+  top:5px;
+  transition: width .3s ease-out!important;
+}
+
+.underline-hover:hover {
+  width: 100%;
 }
