--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -70,7 +70,7 @@ body{
 }
 .card:hover{
   /* background-color: white!important; */
-  background-color: white!important;
+  /* background-color: white!important; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 30px;
   transition: box-shadow 0.2s ease-in-out;
