--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -106,7 +106,7 @@ body{
   }
 }
 .slider-container{
-  background:#ff8282;
+  background:#ff828279;
   padding-top:50px;
   padding-bottom:100px;
   margin-top:50px;
